<resources>
    <string name="app_name">BodyIndex</string>
    <string name="Width">Напишите свой вес</string>
    <string name="Height">Напишите свой рост</string>
    <string name="YouWidth">Ваш вес</string>
    <string name="YouHeight">Ваш рост</string>
    <string name="start">Рассчитать</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Result</string>
    <string name="youIndex">Ваш индекс тела.</string>
    <string name="BackBtn">Назад</string>
</resources>